# carma-public

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .mailmap  CaRMa.md  Candibober.md  Change-Log.md  Changelog.md  Home.md  README  README.md  README.org  README.org_archive  Redson-&-Candibober.md  Wannado.org  build.sh  circle.yml  database_init.sql  stack.yaml  Какими-словами-пугать-Антона.md  Описание экранов (screens.json).md  Права-на-экраны.md  Проведение-релиза.md  Проведение-релиза.org  Работа с Avaya.md  Работа-с-Avaya.md  Работа-с-базой-данных-и-константы.md  Развитие-системы.md  Теги-на-GitHub.md
carma-dict/: carma-dict.cabal
carma-dict/src/Data/: Dict.hs
carma-dict/src/Data/Dict/: New.hs
carma-http/: LICENSE  carma-http.cabal  sources.txt
carma-http/src/Carma/: HTTP.hs
carma-http/src/Carma/HTTP/: Base.hs  New.hs  Util.hs
carma-mobile-server/: .gitignore  carma-mobile-server.cabal  sources.txt  test.cfg
carma-mobile-server/snaplets-default/ssl-client-certificate/: devel.cfg
carma-mobile-server/src/: Application.hs
carma-models/: .gitignore  carma-models.cabal  package.yaml
carma-models/src/Carma/: Model.hs
carma-models/src/Carma/Model/: AbuseTarget.hs  Action.hs  ActionResult.hs  ActionType.hs  Activity.hs  Attachment.hs  AvarcomTask.hs  AvayaEvent.hs  AvayaEventType.hs  BikeTowType.hs  BusinessRole.hs  Call.hs  CallReason.hs  CallType.hs  CallerType.hs  CarClass.hs  CarGeneration.hs  CarMake.hs  CarModel.hs  Case.hs  CaseComment.hs  CaseSearch.hs  CaseSource.hs  CaseStatus.hs  CheckType.hs  City.hs  ClientRefusalReason.hs  Colors.hs  Complication.hs  ConstructorFieldOption.hs  ConsultationResult.hs  ConsultationType.hs  Contract.hs  ContractCheckStatus.hs  ContractRegistrationReason.hs  CtrModel.hs  CtrScreen.hs  DefaultNewCaseField.hs  DeferTime.hs  DeliveryType.hs  (+63 more)
carma-models/src/Carma/Search/: Condition.hs  Patch.hs
carma-models/src/Data/: Model.hs
carma-models/src/Data/Model/: CRUD.hs  CoffeeType.hs  Patch.hs  Search.hs  Sql.hs  TH.hs  Types.hs  View.hs
caroperator-svc/: LICENSE  Main.hs  README.md  caroperator-svc.cabal  caroperator-svc.conf  cert.sh  install.sh
caroperator-svc/conf/: nginx.conf  openssl-intermediate.conf  openssl-root.conf  syslog.conf  upstart.conf
srv/: .pug-lintrc.js  Dockerfile  Gruntfile.coffee  LICENSE  Setup.hs  apply-jade-loader.js  bower.json  carma.cabal  coffee-build.cmd  coffee-build.sh  devel.cfg  frontend.data.json  package-lock.json  package.json  package.yaml  sources.txt  task.sh  webpack.config.coffee  webpack.config.js
srv/resources/: index.html
srv/resources/assets/: login.js
srv/resources/assets/pure/: .editorconfig  README.md  bower.json  package-lock.json  package.json  purrr.sh  webpack.config.js
srv/resources/assets/react-components/: package-lock.json  package.json
srv/resources/assets/script/: avaya.coffee  cti.coffee  data.coffee  dictionaries.coffee  hotkeys.coffee  (+13 more)
srv/resources/css/: common.css  jquery.dataTables.css
srv/resources/indices/: case.js
srv/resources/js/: catcomplete.js  main.js  menu.js  viewPlugins.js
srv/resources/models/: action.js  address.js  call.js  caller.js  car.js  case.js  deliverCar.js  deliverParts.js  hotel.js  information.js  partner.js  partner_service.js  rent.js  sober.js  taxi.js  tech.js  towage.js  transportation.js  vin.js
srv/resources/private/: users.json
srv/resources/report-templates/: all-cases.xlsx
srv/resources/site-config/: car-recommendations.json  conditions.json  db-log.cfg  field-groups.json  recommendations.json  screens.json  syncs.json  targets.json  wazzup-recommendations.json
srv/resources/templates/: index.tpl  login.html
srv/snaplets-default/avaya/: devel.cfg
srv/snaplets-default/db-layer/: devel.cfg
srv/snaplets-default/fileupload/: devel.cfg
srv/snaplets-default/geo/: devel.cfg
srv/snaplets-default/persist/: devel.cfg
srv/snaplets/avaya-aes/: snaplet.cfg
srv/snaplets/candibober/: snaplet.cfg
srv/snaplets/db-layer/: devel.cfg  snaplet.cfg
srv/snaplets/fileupload/: devel.cfg
srv/snaplets/geo/: devel.cfg
srv/snaplets/postgresql-simple/: devel.cfg
srv/snaplets/redson/: snaplet.cfg
srv/src/: Actions.hs  Application.hs  ApplicationHandlers.hs  ApplicationInit.hs  Backoffice.hs  CustomLogic.hs  DbLayer.hs  DbTriggers.hs  DictionaryCache.hs  DumbTemplate.hs  GitStats.hs  Main.hs  ModelTriggers.hs  Nominatim.hs  PgNotify.hs  RedisCRUD.hs  RuntimeFlag.hs  Site.hs  Triggers.hs  Util.hs  WebSockHandlers.hs
srv/src/Actions/: Compile.hs  Eval.hs  Parse.hs  Types.hs
srv/src/AppHandlers/: ARC.hs  ActionAssignment.hs  Avaya.hs  Avaya.hs-boot  Backoffice.hs  Bulk.hs  ContractGenerator.hs  CustomSearches.hs  DiagTree.hs  GitStats.hs  KPI.hs  LocationSharing.hs  ModelFilter.hs  MyActions.hs  PSA.hs  PartnersSearch.hs  RKC.hs  Screens.hs  UserAchievements.hs  Users.hs  Util.hs
srv/src/Carma/: Backoffice.hs
srv/src/CustomLogic/: ActionAssignment.hs
srv/src/Snaplet/: Avaya.hs  ChatManager.hs  DbLayer.hs  FileUpload.hs  Geo.hs  Messenger.hs  Search.hs  SiteConfig.hs  TaskManager.hs
srv/src/Trigger/: Dsl.hs
srv/src/Triggers/: DSL.hs  EraGlonass.hs
srv/src/Utils/: Events.hs  HttpErrors.hs  LegacyModel.hs  Model.hs  NotDbLayer.hs  RKCCalc.hs  Roles.hs  Weather.hs
srv/src/Vin/: FieldParsers.hs  Import.hs  Utils.hs
srv/src/tasks/: rmBadSrv.hs  tOptsMigr.hs
srv/tools/: Main.hs
srv/webpackLoaders/: precompile-code-loader.coffee  precompile-template-loader.coffee
tools/legacy-data-loader/: FieldParsers.hs  Partners.hs  RESTLoader.hs  RedsonTypes.hs  Utils.hs  VINs.hs  hmset-poster.hs  ldl.hs  legacy-data-loader.cabal  load-data.sh  load-partners.hs
tools/partner-import/: carma-partner-import.cabal  partner-import.cabal  sources.txt
tools/partner-import/src/: Main.hs
tools/psa-vin-importer/: psa-vin-importer.cabal  sources.txt
tools/psa-vin-importer/src/: Main.hs
tools/sagai-exporter/: sagai-exporter.cabal  sources.txt
tools/sagai-exporter/src/: Main.hs
tools/vinnie/: package.yaml  sources.txt  vinnie.cabal
tools/vinnie/exe/: vinnie.hs
tools/vinnie/src/: Main.hs
(+1825 files in other folders)
