name:                carma-dict
version:             0.1.0.0
synopsis:            Load and query CaRMa dictionaries
homepage:            https://github.com/f-me/carma-dict
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Dict

  hs-source-dirs: src

  ghc-options: -Wall

  build-depends:
    aeson                       == 0.6.*,
    base                        == 4.6.*,       
    bytestring                  == 0.10.*,      
    unordered-containers        == 0.2.*,
    vector                      == 0.10.*