name:                carma-dict
version:             0.1.2
synopsis:            Load and query legacy CaRMa dictionaries
homepage:            https://github.com/f-me/carma-dict
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Dict
    Data.Dict.New

  hs-source-dirs: src

  ghc-options: -Wall

  build-depends:
    aeson                       >= 0.7 && < 0.8,
    scientific                  >= 0.3.1 && < 0.4,
    base                        == 4.6.*,
    bytestring                  == 0.10.*,
    text                        == 0.11.*,
    unordered-containers        == 0.2.*,
    vector                      == 0.10.*
