name:                carma-http
version:             0.5.0.3
synopsis:            Access local CaRMa using HTTP API
description:         Interface to create/read/update/delete
                     operations of CaRMa HTTP API.
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:
    Carma.HTTP,
    Carma.HTTP.Base,
    Carma.HTTP.New

  other-modules:
    Carma.HTTP.Util

  build-depends:
    aeson                  >= 0.7 && < 0.9,
    base                   >= 4.6 && < 4.8,
    bytestring             == 0.10.*,
    carma-dict             >= 0.1.1 && < 0.2,
    carma-models           >= 0.24 && < 0.32,
    containers             == 0.5.*,
    HTTP                   == 4000.2.*,
    lens                   >= 3.8 && < 4.8,
    network                == 2.6.*,
    network-uri            == 2.6.*,
    text                   >= 0.11 && < 1.3,
    transformers           >= 0.3 && < 0.5,
    unordered-containers   == 0.2.*,
    vector                 == 0.10.*
