name:                carma-http
version:             0.5.0.5
synopsis:            Access local CaRMa using HTTP API
description:         Interface to create/read/update/delete
                     operations of CaRMa HTTP API.
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall -Werror
  hs-source-dirs: src

  exposed-modules:
    Carma.HTTP,
    Carma.HTTP.Base,
    Carma.HTTP.New

  other-modules:
    Carma.HTTP.Util

  build-depends:
    aeson,
    base,
    binary,
    bytestring,
    carma-dict,
    carma-models,
    containers,
    exceptions,
    HTTP,
    http-types,
    lens,
    network,
    network-uri,
    text,
    transformers,
    unordered-containers,
    vector
