Name:                carma-mobile-server
Version:             0.2.5
Synopsis:            Outer world interface for CaRMa
Description:         Standalone application to handle requests from mobile
                     partners and clients, using CaRMa HTTP API.
License:             AllRightsReserved
Author:              Formal Methods
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Tested-with:         GHC == 7.8.3

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable carma-mobile-server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                       >= 0.7 && < 0.10,
    attoparsec                  >= 0.11 && < 0.13,
    scientific                  == 0.3.*,
    base                        >= 4 && < 5,
    bytestring                  >= 0.9.1 && < 0.11,
    carma-dict                  == 0.1.*,
    carma-http                  >= 0.5 && < 0.6,
    carma-models                >= 0.31 && < 0.36,
    configurator                == 0.2.*,
    lens                        >= 3.8 && < 4.10,
    HTTP                        == 4000.2.*,
    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
    mtl                         >= 2 && < 3,
    network                     >= 2.4 && < 2.7,
    old-locale                  == 1.0.*,
    postgresql-simple           == 0.4.*,
    snap                        == 0.13.*,
    snap-core                   >= 0.9.2 && <0.10,
    snap-server                 >= 0.9.2 && <0.10,
    snap-loader-static          == 0.9.*,
    snaplet-postgresql-simple   >= 0.3 && < 0.7,
    text                        >= 0.11 && < 1.3,
    time                        >= 1.1 && < 1.5,
    unordered-containers        == 0.2.*,
    vector                      == 0.10.*

  Extensions:                   OverloadedStrings,
                                LambdaCase
  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
