Name:                carma-mobile-server
Version:             0.2.5
Synopsis:            Outer world interface for CaRMa
Description:         Standalone application to handle requests from mobile
                     partners and clients, using CaRMa HTTP API.
License:             AllRightsReserved
Author:              Formal Methods
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Tested-with:         GHC == 7.8.3

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable carma-mobile-server
  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Application

  Build-depends:
    aeson,
    attoparsec,
    base,
    bytestring,
    carma-dict,
    carma-http,
    carma-model-utils,
    carma-models,
    carma-utils,
    configurator,
    exceptions,
    HTTP,
    lens,
    mtl,
    network,
    old-locale,
    postgresql-simple,
    scientific,
    snap,
    snap-core,
    snap-extras >= 0.12.2.0,
    snap-loader-static,
    snap-server,
    snaplet-postgresql-simple,
    text,
    time,
    unordered-containers,
    vector

  Extensions:                   OverloadedStrings,
                                LambdaCase
  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -Werror -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
