name:                carma-models
version:             0.26.1
synopsis:            Model definitions/CRUD for CaRMa
-- description:
license:             MIT
author:              max taldykin
maintainer:          max@formalmethods.ru
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Model,
    Data.Model.CRUD,
    Data.Model.Types,
    Data.Model.Patch,
    Data.Model.Patch.Sql,
    Data.Model.Sql,
    Data.Model.View,

    Carma.Model,
    Carma.Model.ActionType,
    Carma.Model.ActionResult,
    Carma.Model.Attachment,
    Carma.Model.DeferTime,
    Carma.Model.Search,
    Carma.Model.Types,
    Carma.Model.PgTypes,
    Carma.Model.LegacyTypes,
    Carma.Model.City,
    Carma.Model.CaseStatus,
    Carma.Model.CarClass,
    Carma.Model.CarMake,
    Carma.Model.CarModel,
    Carma.Model.Engine,
    Carma.Model.FalseCall,
    Carma.Model.Contract,
    Carma.Model.ContractCheckStatus,
    Carma.Model.FieldPermission,
    Carma.Model.Dictionary,
    Carma.Model.LegalForm,
    Carma.Model.ClientRefusalReason,
    Carma.Model.ConstructorFieldOption,
    Carma.Model.CtrModel,
    Carma.Model.CheckType,
    Carma.Model.Partner,
    Carma.Model.PartnerRefusalReason,
    Carma.Model.PartnerCancel,
    Carma.Model.PaymentType,
    Carma.Model.Program,
    Carma.Model.ProgramType,
    Carma.Model.Satisfaction,
    Carma.Model.ServiceStatus,
    Carma.Model.ServiceType,
    Carma.Model.SubProgram,
    Carma.Model.SubProgramContact,
    Carma.Model.SubProgramContractPermission,
    Carma.Model.SubProgramService,
    Carma.Model.TaxScheme,
    Carma.Model.TechType,
    Carma.Model.TowType,
    Carma.Model.Transmission,
    Carma.Model.VinFormat,
    Carma.Model.VinFormat.Meta,
    Carma.Model.Region,
    Carma.Model.Role,
    Carma.Model.BusinessRole,
    Carma.Model.Case,
    Carma.Model.Call,

    Carma.Model.Diagnostics.Cause,
    Carma.Model.Diagnostics.Part,
    Carma.Model.Diagnostics.Suggestion,
    Carma.Model.Diagnostics.System,
    Carma.Model.Diagnostics.Wazzup,

    Carma.Model.Service,
    Carma.Model.Service.AverageCommissioner,
    Carma.Model.Service.Bank,
    Carma.Model.Service.Consultation,
    Carma.Model.Service.Continue,
    Carma.Model.Service.DeliverCar,
    Carma.Model.Service.DeliverClient,
    Carma.Model.Service.DeliverParts,
    Carma.Model.Service.Hotel,
    Carma.Model.Service.Information,
    Carma.Model.Service.LegalAssistance,
    Carma.Model.Service.Rent,
    Carma.Model.Service.SoberDriver,
    Carma.Model.Service.Taxi,
    Carma.Model.Service.Tickets,
    Carma.Model.Service.Transportation,
    Carma.Model.Service.Tech,
    Carma.Model.Service.TechInspect,
    Carma.Model.Service.Towage,

    Carma.Model.ServiceInfo,
    Carma.Model.Colors,

    Carma.Model.Sms,
    Carma.Model.SmsTemplate,

    Carma.Model.Usermeta,
    Carma.Model.Action,
    Carma.Model.Event
    Carma.Model.UserState

    Carma.Model.KPI.Stat
    Carma.Model.KPI.Oper
    Carma.Model.KPI.Group

  other-modules:
    Data.Model.TH,

    Carma.Model.Case.Type
    Carma.Model.SubProgram.Type

  hs-source-dirs:    src
  build-depends:
    aeson                >= 0.7 && < 0.8,
    base                 == 4.7.*,
    base16-bytestring    == 0.1.*,
    blaze-builder        == 0.3.*,
    blaze-textual        == 0.2.*,
    bytestring           == 0.10.*,
    cereal               == 0.4.*,
    containers           == 0.5.*,
    either               == 4.3.*,
    errors               == 1.4.*,
    old-locale           == 1.0.0.*,
    parsec               == 3.1.*,
    postgresql-libpq     == 0.9.*,
    postgresql-simple    == 0.4.*,
    singletons           == 1.0.*,
    template-haskell,
    text                 >= 0.11 && < 1.2,
    time                 == 1.4.*,
    transformers         >= 0.3 && < 0.5,
    unordered-containers == 0.2.*,
    vector               == 0.10.*,
    scientific           == 0.3.*

  extensions:
    DataKinds, KindSignatures, TypeOperators,
    TypeFamilies, EmptyDataDecls,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
    DeriveDataTypeable,
    OverloadedStrings, TupleSections,
    NamedFieldPuns, RecordWildCards,
    LambdaCase

  ghc-options: -Wall -fcontext-stack=200
