name:                carma-models
version:             0.29
synopsis:            Model definitions/CRUD for CaRMa
-- description:
license:             MIT
author:              max taldykin
maintainer:          max@formalmethods.ru
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Model,
    Data.Model.CRUD,
    Data.Model.Types,
    Data.Model.Patch,
    Data.Model.Patch.Sql,
    Data.Model.Sql,
    Data.Model.View,

    Carma.Model,

    Carma.Model.AbuseTarget,
    Carma.Model.Action,
    Carma.Model.ActionResult,
    Carma.Model.ActionType,
    Carma.Model.Attachment,
    Carma.Model.AvayaEvent,
    Carma.Model.AvayaEventType,
    Carma.Model.BusinessRole,
    Carma.Model.Call,
    Carma.Model.CallReason,
    Carma.Model.CallType,
    Carma.Model.CallerType,
    Carma.Model.CarClass,
    Carma.Model.CarMake,
    Carma.Model.CarModel,
    Carma.Model.Case,
    Carma.Model.CaseStatus,
    Carma.Model.CheckType,
    Carma.Model.City,
    Carma.Model.ClientRefusalReason,
    Carma.Model.Colors,
    Carma.Model.ConstructorFieldOption,
    Carma.Model.Contract,
    Carma.Model.ContractCheckStatus,
    Carma.Model.CtrModel,
    Carma.Model.DeferTime,

    Carma.Model.Diagnostics.Cause,
    Carma.Model.Diagnostics.Part,
    Carma.Model.Diagnostics.Suggestion,
    Carma.Model.Diagnostics.System,
    Carma.Model.Diagnostics.Wazzup,

    Carma.Model.Dictionary,
    Carma.Model.Engine,
    Carma.Model.Event
    Carma.Model.FalseCall,
    Carma.Model.FieldPermission,

    Carma.Model.KPI.Group,
    Carma.Model.KPI.Oper,
    Carma.Model.KPI.Stat,

    Carma.Model.LegacyTypes,
    Carma.Model.LegalForm,
    Carma.Model.Partner,
    Carma.Model.PartnerCancel,
    Carma.Model.PartnerRefusalReason,
    Carma.Model.PartnerService,
    Carma.Model.PaymentType,
    Carma.Model.PgTypes,
    Carma.Model.Program,
    Carma.Model.ProgramType,
    Carma.Model.Region,
    Carma.Model.Role,
    Carma.Model.Satisfaction,
    Carma.Model.Satisfaction,
    Carma.Model.Search,
    Carma.Model.ServiceStatus,
    Carma.Model.ServiceType,

    Carma.Model.SubProgram,
    Carma.Model.SubProgramContact,
    Carma.Model.SubProgramContractPermission,
    Carma.Model.SubProgramService,

    Carma.Model.TarifOption,
    Carma.Model.TaxScheme,
    Carma.Model.TechType,
    Carma.Model.TowType,
    Carma.Model.Transmission,
    Carma.Model.VinFormat,
    Carma.Model.VinFormat.Meta,

    Carma.Model.Service,
    Carma.Model.Service.AverageCommissioner,
    Carma.Model.Service.Bank,
    Carma.Model.Service.Consultation,
    Carma.Model.Service.Continue,
    Carma.Model.Service.DeliverCar,
    Carma.Model.Service.DeliverClient,
    Carma.Model.Service.DeliverParts,
    Carma.Model.Service.Hotel,
    Carma.Model.Service.Information,
    Carma.Model.Service.LegalAssistance,
    Carma.Model.Service.Rent,
    Carma.Model.Service.SoberDriver,
    Carma.Model.Service.Taxi,
    Carma.Model.Service.Tech,
    Carma.Model.Service.TechInspect,
    Carma.Model.Service.Tickets,
    Carma.Model.Service.Towage,
    Carma.Model.Service.Transportation,

    Carma.Model.ServiceInfo,
    Carma.Model.ServiceStatus,
    Carma.Model.ServiceType,
    Carma.Model.Sms,
    Carma.Model.SmsTemplate,
    Carma.Model.SubProgram,
    Carma.Model.SubProgramContact,
    Carma.Model.SubProgramContractPermission,
    Carma.Model.SubProgramService,
    Carma.Model.TaxScheme,
    Carma.Model.TechType,
    Carma.Model.TowType,
    Carma.Model.Transmission,
    Carma.Model.Types,
    Carma.Model.UserState
    Carma.Model.Usermeta,
    Carma.Model.VDN,
    Carma.Model.VinFormat,
    Carma.Model.VinFormat.Meta,
    Carma.Model.VipNumber

  other-modules:
    Data.Model.TH,

    Carma.Model.Case.Type,
    Carma.Model.SubProgram.Type

  hs-source-dirs:    src
  build-depends:
    aeson                >= 0.7 && < 0.9,
    base                 == 4.7.*,
    base16-bytestring    == 0.1.*,
    blaze-builder        == 0.3.*,
    blaze-textual        == 0.2.*,
    bytestring           == 0.10.*,
    cereal               == 0.4.*,
    containers           == 0.5.*,
    either               == 4.3.*,
    errors               == 1.4.*,
    old-locale           == 1.0.0.*,
    parsec               == 3.1.*,
    postgresql-libpq     == 0.9.*,
    postgresql-simple    == 0.4.*,
    scientific           == 0.3.*,
    singletons           == 1.0.*,
    template-haskell,
    text                 >= 0.11 && < 1.3,
    time                 == 1.4.*,
    transformers         >= 0.3 && < 0.5,
    unordered-containers == 0.2.*,
    vector               == 0.10.*

  extensions:
    DataKinds, KindSignatures, TypeOperators,
    TypeFamilies, EmptyDataDecls,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
    DeriveDataTypeable,
    OverloadedStrings, TupleSections,
    NamedFieldPuns, RecordWildCards,
    LambdaCase

  ghc-options: -Wall -fcontext-stack=200
