name:                carma-models
version:             0.38.3
synopsis:            Model definitions/CRUD for CaRMa
-- description:
license:             MIT
author:              max taldykin
maintainer:          max@formalmethods.ru
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Model,
    Data.Model.CRUD,
    Data.Model.Types,
    Data.Model.Patch,
    Data.Model.Patch.Sql,
    Data.Model.Sql,
    Data.Model.View,

    Carma.Model,

    Carma.Model.AbuseTarget,
    Carma.Model.Action,
    Carma.Model.ActionResult,
    Carma.Model.ActionType,
    Carma.Model.Activity,
    Carma.Model.Attachment,
    Carma.Model.AvayaEvent,
    Carma.Model.AvayaEventType,
    Carma.Model.BusinessRole,
    Carma.Model.Call,
    Carma.Model.CallReason,
    Carma.Model.CallType,
    Carma.Model.CallerType,
    Carma.Model.CarClass,
    Carma.Model.CarMake,
    Carma.Model.CarModel,
    Carma.Model.Case,
    Carma.Model.CaseComment,
    Carma.Model.CaseSource,
    Carma.Model.CaseStatus,
    Carma.Model.CheckType,
    Carma.Model.City,
    Carma.Model.ClientRefusalReason,
    Carma.Model.Colors,
    Carma.Model.Complication,
    Carma.Model.ConstructorFieldOption,
    Carma.Model.ConsultationResult,
    Carma.Model.ConsultationType,
    Carma.Model.Contract,
    Carma.Model.ContractCheckStatus,
    Carma.Model.CtrModel,
    Carma.Model.DeferTime,

    Carma.Model.Diagnostics.Cause,
    Carma.Model.Diagnostics.Part,
    Carma.Model.Diagnostics.Suggestion,
    Carma.Model.Diagnostics.System,
    Carma.Model.Diagnostics.Wazzup,

    Carma.Model.DeliveryType,
    Carma.Model.Dictionary,
    Carma.Model.Engine,
    Carma.Model.Event
    Carma.Model.FalseCall,
    Carma.Model.FieldPermission,

    Carma.Model.KPI.Group,
    Carma.Model.KPI.Oper,
    Carma.Model.KPI.Stat,

    Carma.Model.LegacyTypes,
    Carma.Model.LegalForm,
    Carma.Model.Partner,
    Carma.Model.PartnerCancel,
    Carma.Model.PartnerRefusalReason,
    Carma.Model.PartnerDelay,
    Carma.Model.PartnerDelay.Confirmed,
    Carma.Model.PartnerDelay.Exceptional,
    Carma.Model.PartnerDelay.Notified,
    Carma.Model.PartnerDelay.Reason,
    Carma.Model.PaymentType,
    Carma.Model.PgTypes,
    Carma.Model.ProcessingConfig,
    Carma.Model.Program,
    Carma.Model.ProgramType,
    Carma.Model.Region,
    Carma.Model.RequestType,
    Carma.Model.Role,
    Carma.Model.Satisfaction,
    Carma.Model.Search,

    Carma.Model.Service,
    Carma.Model.Service.AverageCommissioner,
    Carma.Model.Service.Bank,
    Carma.Model.Service.Consultation,
    Carma.Model.Service.Continue,
    Carma.Model.Service.DeliverCar,
    Carma.Model.Service.DeliverClient,
    Carma.Model.Service.DeliverParts,
    Carma.Model.Service.Hotel,
    Carma.Model.Service.Information,
    Carma.Model.Service.LegalAssistance,
    Carma.Model.Service.Rent,
    Carma.Model.Service.SoberDriver,
    Carma.Model.Service.Taxi,
    Carma.Model.Service.Tech,
    Carma.Model.Service.TechInspect,
    Carma.Model.Service.Tickets,
    Carma.Model.Service.Towage,
    Carma.Model.Service.Transportation,
    Carma.Model.ServiceInfo,
    Carma.Model.ServiceStatus,
    Carma.Model.ServiceType,

    Carma.Model.Sms,
    Carma.Model.SmsTemplate,

    Carma.Model.SubProgram,
    Carma.Model.SubProgramContact,
    Carma.Model.SubProgramContractPermission,
    Carma.Model.SubProgramService,

    Carma.Model.TaxScheme,
    Carma.Model.TechType,
    Carma.Model.TowType,
    Carma.Model.TowerType,
    Carma.Model.Transmission,
    Carma.Model.Types,
    Carma.Model.UrgentServiceReason,
    Carma.Model.UserState,
    Carma.Model.Usermeta,
    Carma.Model.VDN,
    Carma.Model.VinFormat,
    Carma.Model.VinFormat.Meta,
    Carma.Model.VipNumber

  other-modules:
    Data.Model.TH,
    Data.Model.View.Regexp,

    Carma.Model.Case.Type,
    Carma.Model.SubProgram.Type

  hs-source-dirs:    src
  build-depends:
      aeson
    , base
    , base16-bytestring
    , blaze-builder
    , blaze-textual
    , bytestring
    , cereal
    , containers
    , errors
    , parsec
    , postgresql-libpq
    , postgresql-simple
    , scientific
    , singletons
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , vector

  extensions:
    DataKinds, KindSignatures, TypeOperators,
    TypeFamilies, EmptyDataDecls,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
    DeriveDataTypeable,
    OverloadedStrings, TupleSections,
    NamedFieldPuns, RecordWildCards,
    LambdaCase

  ghc-options: -Wall -fcontext-stack=200
