name:                caroperator-svc
version:             0.1.0.0
synopsis:            Add new contracts via HTTP

license:             MIT
license-file:        LICENSE
author:              Max Taldykin
maintainer:          max@formalmethods.ru

build-type:          Simple

cabal-version:       >=1.10

executable caroperator-svc
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings, LambdaCase

  build-depends:
    base,
    time,
    transformers,
    text,
    aeson,
    regex-compat,
    configurator,
    hsyslog,
    scotty,
    http-types,
    resource-pool,
    postgresql-simple
