Name:                carma
Version:             0.1.0.1
Synopsis:            CRM
Description:         Customer relationship management and call center assistance system
License:             AllRightsReserved
Author:              Formal Methods
Maintainer:          dev@formalmethods.ru
Stability:           Do not touch anything
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.8.3

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable carma
  hs-source-dirs: src
  main-is: Main.hs

  Other-modules:
    Application,
    ApplicationInit,
    ApplicationHandlers,
    AppHandlers.Users,
    AppHandlers.Util,
    AppHandlers.ActionAssignment,
    AppHandlers.Bulk,
    AppHandlers.CustomSearches,
    AppHandlers.CustomSearches.Contract,
    AppHandlers.CustomSearches.Contract.Base,
    AppHandlers.PSA,
    AppHandlers.PSA.Base,
    Carma.Backoffice,
    Carma.Backoffice.DSL,
    Carma.Backoffice.DSL.Types,
    Carma.Backoffice.Text,
    Carma.Backoffice.Graph,
    Carma.Backoffice.Validation,
    Snaplet.DbLayer,
    Snaplet.DbLayer.RedisCRUD,
    Snaplet.DbLayer.PostgresCRUD,
    Snaplet.DbLayer.RKC,
    Snaplet.DbLayer.Dictionary,
    Snaplet.DbLayer.Triggers,
    Snaplet.DbLayer.Triggers.Actions,
    Snaplet.DbLayer.Triggers.Defaults,
    Snaplet.DbLayer.Triggers.Dsl,
    Snaplet.DbLayer.Triggers.Types,
    Snaplet.DbLayer.Triggers.Util,
    Snaplet.DbLayer.Types,
    Snaplet.DbLayer.Util,
    Snaplet.SiteConfig,
    Snaplet.SiteConfig.Class,
    Snaplet.SiteConfig.Dictionaries,
    Snaplet.SiteConfig.Types,
    Snaplet.SiteConfig.Models,
    Snaplet.SiteConfig.SpecialPermissions,
    Snaplet.FileUpload,
    Snaplet.Geo,
    Snaplet.TaskManager,
    Snaplet.Auth.Class,
    Snaplet.Auth.PGUsers,
    ModelTriggers,
    Trigger.Dsl,
    Utils.HttpErrors,
    Utils.NotDbLayer,
    Util

  Build-depends:
    aeson                       >= 0.7 && < 0.8,
    attoparsec                  >= 0.10 && < 0.13,
    base                        >= 4 && < 5,
    blaze-builder               == 0.3.*,
    bytestring                  >= 0.9.1 && < 0.11,
    carma-models                >= 0.23 && < 0.24,
    carma-http                  == 0.4.*,
    carma-sync                  >= 0.5 && < 0.6,
    conduit                     == 1.1.*,
    configurator                >= 0.2 && < 0.4,
    connection                  == 0.2.*,
    containers                  == 0.5.*,
    data-default                == 0.5.*,
    directory                   == 1.2.*,
    easy-file                   == 0.1.*,
    either                      == 4.3.*,
    fgl                         == 5.5.*,
    filepath                    == 1.3.*,
    graphviz                    == 2999.17.*,
    free                        == 4.9.*,
    hashable                    >= 1.1 && < 1.3,
    hedis                       == 0.6.*,
    heist                       == 0.13.*,
    hformat                     == 0.1.*,
    hsyslog                     == 1.6.*,
    HTTP                        == 4000.2.*,
    http-conduit                == 2.1.*,
    http-types                  == 0.8.*,
    lens                        >= 3.8 && < 4.4,
    MonadCatchIO-transformers   >= 0.2 && < 0.4,
    mtl                         >= 2.1 && < 2.3,
    mime-mail                   == 0.4.1.2,
    network                     >= 2.4 && < 2.6,
    old-locale                  == 1.0.*,
    postgresql-simple           == 0.3.*,
    postgresql-sync-map         >= 0.6 && < 0.7,
    pureMD5                     == 2.1.*,
    random                      == 1.0.*,
    resourcet                   == 1.1.*,
    resource-pool-catchio       >= 0.2 && < 0.3,
    singletons                  == 1.0.*,
    snap                        == 0.13.*,
    snap-core                   == 0.9.*,
    snap-extras                 == 0.10.*,
    snap-loader-static          >= 0.9.0.1 && < 0.10,
    snap-server                 == 0.9.*,
    snaplet-postgresql-simple   >= 0.3 && < 0.6,
    snaplet-redis               >= 0.1.3.3 && < 0.2,
    stm                         == 2.4.*,
    temporary                   == 1.2.*,
    text                        >= 0.11 && < 1.2,
    time                        >= 1.1 && < 1.5,
    transformers                >= 0.2 && < 0.5,
    unordered-containers,
    vector                      == 0.10.*,
    vinnie                      >= 0.3.1 && < 0.4,
    weather-api                 >= 0.4.3,
    xml-conduit                 == 1.2.*,
    xmlhtml                     == 0.2.*,
    process-extras              == 0.2.*,
    websockets                  == 0.8.*,
    websockets-snap             == 0.8.*,
    BoundedChan                 == 1.0.3.*,
    timers                      == 0.2.*,
    suspend                     >= 0.1 && < 0.3

  Extensions:
    MultiParamTypeClasses,
    FlexibleInstances,
    FlexibleContexts,
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns,
    TupleSections,
    QuasiQuotes,
    LambdaCase

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9.0.1 && < 0.10
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Executable carma-db-checker
  hs-source-dirs: tools
  main-is: Main.hs
  Build-depends:
      postgresql-simple           == 0.3.*,
      carma-models                >= 0.23 && < 0.24,
      unordered-containers        == 0.2.*,
      cmdlib                      == 0.3.*,
      boxes                       == 0.1.*
