Name:                carma
Version:             0.1.0.1
Synopsis:            CRM
Description:         Customer relationship management and call center assistance system
License:             AllRightsReserved
Author:              Formal Methods
Maintainer:          dev@formalmethods.ru
Stability:           Do not touch anything
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.8.3

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable carma
  hs-source-dirs: src
  main-is: Main.hs

  Other-modules:
    Application,
    ApplicationInit,
    ApplicationHandlers,
    AppHandlers.ActionAssignment,
    AppHandlers.Backoffice,
    AppHandlers.Bulk,
    AppHandlers.CustomSearches,
    AppHandlers.CustomSearches.Contract,
    AppHandlers.CustomSearches.Contract.Base,
    AppHandlers.PSA,
    AppHandlers.PSA.Base,
    AppHandlers.RKC,
    AppHandlers.Users,
    AppHandlers.Util,
    Carma.Backoffice,
    Carma.Backoffice.DSL,
    Carma.Backoffice.DSL.Types,
    Carma.Backoffice.Text,
    Carma.Backoffice.Graph,
    Carma.Backoffice.Validation,
    Snaplet.SiteConfig,
    Snaplet.SiteConfig.Class,
    Snaplet.SiteConfig.Dictionaries,
    Snaplet.SiteConfig.Models,
    Snaplet.SiteConfig.SpecialPermissions,
    Snaplet.SiteConfig.Types,
    Snaplet.Auth.Class,
    Snaplet.Auth.PGUsers,
    Snaplet.Avaya,
    Snaplet.FileUpload,
    Snaplet.Geo,
    Snaplet.TaskManager,
    Triggers,
    Triggers.Action.MailToDealer,
    Triggers.Action.MailToGenser,
    Triggers.Action.MailToPSA,
    Triggers.Action.SMS,
    Triggers.DSL,
    Util,
    Utils.HttpErrors

  Build-depends:
    BoundedChan                 == 1.0.3.*,
    HTTP                        == 4000.2.*,
    MonadCatchIO-transformers   >= 0.2 && < 0.4,
    aeson                       >= 0.7 && < 0.9,
    attoparsec                  >= 0.10 && < 0.13,
    base                        >= 4 && < 5,
    blaze-builder               == 0.3.*,
    bytestring                  >= 0.9.1 && < 0.11,
    carma-http                  >= 0.4 && < 0.6,
    carma-models                >= 0.31 && < 0.32,
    case-insensitive            == 1.2.*,
    conduit                     >= 1.1 && < 1.3,
    configurator                >= 0.2 && < 0.4,
    connection                  == 0.2.*,
    containers                  == 0.5.*,
    data-default                == 0.5.*,
    directory                   == 1.2.*,
    dmcc                        >= 0.2 && < 0.3,
    easy-file                   >= 0.1 && < 0.3,
    either                      == 4.3.*,
    fgl                         == 5.5.*,
    filepath                    == 1.3.*,
    free                        == 4.9.*,
    graphviz                    == 2999.17.*,
    hashable                    >= 1.1 && < 1.3,
    heist                       >= 0.13 && < 0.15,
    hformat                     == 0.1.*,
    hsyslog                     == 2.0.*,
    http-conduit                == 2.1.*,
    http-types                  == 0.8.*,
    lens                        >= 3.8 && < 4.8,
    mime-mail                   == 0.4.1.2,
    mtl                         >= 2.1 && < 2.3,
    network                     >= 2.4 && < 2.7,
    old-locale                  == 1.0.*,
    pg-simple-qq-alt            >= 0.1 && < 0.2,
    postgresql-simple           >= 0.4.7 && < 0.5,
    process-extras              == 0.2.*,
    pureMD5                     == 2.1.*,
    random                      >= 1.0 && < 1.2,
    resource-pool-catchio       >= 0.2 && < 0.3,
    resourcet                   == 1.1.*,
    singletons                  == 1.0.*,
    snap                        == 0.13.*,
    snap-core                   == 0.9.*,
    snap-extras                 == 0.11.*,
    snap-loader-static          >= 0.9.0.1 && < 0.10,
    snap-server                 == 0.9.*,
    snaplet-postgresql-simple   >= 0.3 && < 0.6,
    stm                         == 2.4.*,
    temporary                   == 1.2.*,
    text                        >= 0.11 && < 1.3,
    time                        >= 1.1 && < 1.5,
    transformers                >= 0.4 && < 0.5,
    unordered-containers,
    vector                      >= 0.10 && < 0.10.12.3,
    vinnie                      >= 0.3.2 && < 0.4,
    weather-api                 >= 0.4.3,
    websockets                  == 0.9.*,
    websockets-snap             == 0.9.*,
    xml-conduit                 == 1.2.*,
    xmlhtml                     == 0.2.*

  Extensions:
    MultiParamTypeClasses,
    FlexibleInstances,
    FlexibleContexts,
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns,
    TupleSections,
    QuasiQuotes,
    LambdaCase

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9.0.1 && < 0.10
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Executable carma-db-checker
  hs-source-dirs: tools
  main-is: Main.hs
  Build-depends:
      postgresql-simple           >= 0.4.4.1 && < 0.5,
      carma-models                >= 0.29 && < 0.32,
      unordered-containers        == 0.2.*,
      cmdlib                      == 0.3.*,
      boxes                       == 0.1.*
