Name:                carma
Version:             1.0
Synopsis:            CRM
Description:         Customer relationship management and call center assistance system
License:             BSD3
License-file:        LICENSE
Author:              Formal Methods
Maintainer:          dev@formalmethods.ru
Stability:           Do not touch anything
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.10.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable carma
  hs-source-dirs: src
  main-is: Main.hs

  Other-modules:
    Application,
    ApplicationInit,
    ApplicationHandlers,
    AppHandlers.ActionAssignment,
    AppHandlers.Avaya,
    AppHandlers.Backoffice,
    AppHandlers.Bulk,
    AppHandlers.CustomSearches,
    AppHandlers.CustomSearches.Contract,
    AppHandlers.CustomSearches.Contract.Base,
    AppHandlers.PSA,
    AppHandlers.PSA.Base,
    AppHandlers.RKC,
    AppHandlers.Users,
    AppHandlers.Util,
    Carma.Backoffice,
    Carma.Backoffice.DSL,
    Carma.Backoffice.DSL.Types,
    Carma.Backoffice.Text,
    Carma.Backoffice.Graph,
    Carma.Backoffice.Validation,
    Snaplet.SiteConfig,
    Snaplet.SiteConfig.Class,
    Snaplet.SiteConfig.Dictionaries,
    Snaplet.SiteConfig.Models,
    Snaplet.SiteConfig.SpecialPermissions,
    Snaplet.SiteConfig.Types,
    Snaplet.Auth.Class,
    Snaplet.Auth.PGUsers,
    Snaplet.FileUpload,
    Snaplet.Geo,
    Snaplet.TaskManager,
    Triggers,
    Triggers.Action.MailToDealer,
    Triggers.Action.MailToGenser,
    Triggers.Action.MailToPSA,
    Triggers.Action.SMS,
    Triggers.DSL,
    Util,
    Utils.HttpErrors

  Build-depends:
      aeson
    , attoparsec
    , base
    , basic-prelude
    , blaze-builder
    , bytestring
    , carma-models
    , case-insensitive
    , configurator
    , containers
    , directory
    , dmcc
    , easy-file
    , errors
    , fgl
    , filepath
    , free
    , graphviz
    , heist
    , hsyslog
    , HTTP
    , lens
    , MonadCatchIO-transformers
    , mtl
    , pg-simple-qq-alt
    , postgresql-simple
    , process-extras
    , pureMD5
    , random
    , snap
    , snap-core
    , snap-extras
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , vinnie
    , weather-api
    , websockets
    , websockets-snap
    , xmlhtml

  Extensions:
    MultiParamTypeClasses,
    FlexibleInstances,
    FlexibleContexts,
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns,
    TupleSections,
    QuasiQuotes,
    LambdaCase

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
