
Name:                legacy-data-loader
Version:             0.1
Synopsis:            Custom tool for transferring data from files to database.
License:             PublicDomain
Author:              max taldykin
Maintainer:          max@formalmethods.ru

Category:            Database
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable ldl
  Main-is:           ldl.hs
  
  Build-depends:     base, time, old-locale
                    ,containers, bytestring, utf8-string, text
                    ,enumerator
                    ,csv-enumerator == 0.10.*
                    ,aeson == 0.4.*
                    ,hedis == 0.3.*
  
  
